# ms-todo-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
examples/: README.md  claude_desktop_config.json
src/ms_todo_mcp/: __init__.py  __main__.py  auth.py  graph.py  server.py
