[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ms-todo-mcp"
version = "0.1.0"
description = "MCP server for Microsoft To Do (Microsoft Graph)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "David Carrascosa" }]
keywords = ["mcp", "microsoft-todo", "microsoft-graph", "tasks", "claude"]
dependencies = [
    "mcp>=1.2.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0"]

[project.scripts]
ms-todo-mcp = "ms_todo_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/dcarrascosa/ms-todo-mcp"
Issues = "https://github.com/dcarrascosa/ms-todo-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ms_todo_mcp"]

[tool.ruff]
line-length = 100
target-versio